@@ -1,6 +1,9 @@
 package se.mockachino;
 
+import java.lang.reflect.Array;
+import java.util.ArrayList;
 import java.util.HashMap;
+import java.util.List;
 import java.util.Map;
 
 public class Primitives {
@@ -36,4 +39,18 @@ public class Primitives {
 		return real;
 	}
 
+	public static Object toList(Object arg) {
+		if (arg == null) {
+			return null;
+		}
+		if (arg.getClass().isArray()) {
+			List ret = new ArrayList();
+			int n = Array.getLength(arg);
+			for (int i = 0; i < n; i++) {
+				ret.add(toList(Array.get(arg, i)));
+			}
+			return ret;
+		}
+		return arg;
+	}
 }
