@@ -1,12 +1,13 @@
 package se.mockachino.matchers.matcher;
 
+import se.mockachino.Primitives;
 import se.mockachino.util.Formatting;
 
 public class EqualityMatcher<T> extends BasicMatcher<T> {
 	private final Object value;
 
 	public EqualityMatcher(Object value) {
-		this.value = value;
+		this.value = Primitives.toList(value);
 	}
 
 	@Override
@@ -14,6 +15,7 @@ public class EqualityMatcher<T> extends BasicMatcher<T> {
 		if (value == null) {
 			return other == null;
 		}
+		other = (T) Primitives.toList(other);
 		return value.equals(other);
 	}
 
