@@ -7,10 +7,10 @@ import se.mockachino.order.OrderingContext;
 import java.util.List;
 
 import static org.junit.Assert.fail;
-import static se.mockachino.Mockachino.anyInt;
 import static se.mockachino.Mockachino.mock;
 import static se.mockachino.Mockachino.newOrdering;
 import static se.mockachino.Mockachino.verifyAtLeast;
+import static se.mockachino.matchers.Matchers.anyInt;
 
 public class ErrorMessageTest {
 	@Test
