@@ -11,19 +11,19 @@ import java.util.List;
 
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.fail;
-import static se.mockachino.Mockachino.any;
-import static se.mockachino.Mockachino.anyInt;
-import static se.mockachino.Mockachino.eq;
-import static se.mockachino.Mockachino.mType;
-import static se.mockachino.Mockachino.match;
 import static se.mockachino.Mockachino.mock;
 import static se.mockachino.Mockachino.newOrdering;
-import static se.mockachino.Mockachino.not;
 import static se.mockachino.Mockachino.stubReturn;
 import static se.mockachino.Mockachino.verifyAtLeast;
 import static se.mockachino.Mockachino.verifyExactly;
 import static se.mockachino.Mockachino.verifyNever;
 import static se.mockachino.Mockachino.verifyOnce;
+import static se.mockachino.matchers.Matchers.any;
+import static se.mockachino.matchers.Matchers.anyInt;
+import static se.mockachino.matchers.Matchers.eq;
+import static se.mockachino.matchers.Matchers.mType;
+import static se.mockachino.matchers.Matchers.match;
+import static se.mockachino.matchers.Matchers.not;
 
 public class ExamplesTest {
 
